more helper functions

--- a/decisiontreefunctions.ipynb
+++ b/decisiontreefunctions.ipynb
@@ -616,6 +616,7 @@
     "# ex. \"is the petal width less/larger than value\"\n",
     "# we have four questions to ask it\n",
     "\n",
+    "# split dataset based on column and value\n",
     "def split_data(data, split_col, split_val):\n",
     "    \n",
     "    # get that specific column's values\n",
