--- a/DecisionTreeClassifier.ipynb
+++ b/DecisionTreeClassifier.ipynb
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -550,32 +550,7 @@
     "        \n",
     "        # if a tree wasn't fitted\n",
     "        else:\n",
-    "            print(\"NotFittedError: Please fit your decision tree first!\")\n",
-    "            \n",
-    "#     def predict_append(self, test_df):\n",
-    "        \n",
-    "#         # if a tree has been fitted\n",
-    "#         if self.tree:\n",
-    "            \n",
-    "#             # store true labels for our test_df\n",
-    "#             y_test_true = test_df.iloc[:, -1]\n",
-    "            \n",
-    "#             # create a new column for our predictions\n",
-    "#             test_df['predictions'] = test_df.apply(self.classify_observation, axis=1, args=(self.tree,))\n",
-    "            \n",
-    "#             while self.append not in ['Y', 'y', 'N', 'n']:\n",
-    "#                 self.append = input('Append predictions as new column in input dataframe? Y or N')\n",
-    "#                 if self.append in ['Y', 'y']:\n",
-    "#                     print(\"Yes\")\n",
-    "            \n",
-    "#                 elif self.append in ['N', 'n']:\n",
-    "#                     print(\"No\")\n",
-    "#                 else:\n",
-    "#                     print(\"Not a valid input\")\n",
-    "        \n",
-    "#         # if a tree wasn't fitted\n",
-    "#         else:\n",
-    "#             print(\"NotFittedError: Please fit your decision tree first!\")"
+    "            print(\"NotFittedError: Please fit your decision tree first!\")"
    ]
   },
   {
