fixing function order

--- a/DecisionTreeClassifier.ipynb
+++ b/DecisionTreeClassifier.ipynb
@@ -268,12 +268,56 @@
     "        self.tree = None\n",
     "        self.append = None\n",
     "        \n",
+    "        \n",
     "    def fit(self, train_df):\n",
     "        \n",
     "        # run method decision_tree and set it as the self.tree attribute\n",
     "        self.tree = self.decision_tree(train_df, self.min_samples, self.max_depth)\n",
     "        \n",
     "        return self\n",
+    "    \n",
+    "    \n",
+    "    def predict(self, test_df):\n",
+    "\n",
+    "        # if a tree has been fitted\n",
+    "        if self.tree:\n",
+    "            \n",
+    "            # store true labels for our test_df\n",
+    "            y_test_true = test_df.iloc[:, -1]\n",
+    "            \n",
+    "            while self.append not in ['Y', 'y', 'N', 'n']:\n",
+    "                \n",
+    "                # ask the user if they want the DTC's predictions appended\n",
+    "                self.append = input('Append predictions as new column in input dataframe? Y or N')\n",
+    "                \n",
+    "                # if they do \n",
+    "                if self.append in ['Y', 'y']:\n",
+    "                    \n",
+    "                    continue\n",
+    "            \n",
+    "                # if they don't want their predictions appended\n",
+    "                elif self.append in ['N', 'n']:\n",
+    "                    \n",
+    "                    # create a copy of the test_df so results don't get appended\n",
+    "                    test_df = test_df.copy()\n",
+    "                    \n",
+    "                # if not a valid input  \n",
+    "                else:\n",
+    "                    \n",
+    "                    print(\"Not a valid input. Try again you silly goose.\")\n",
+    "            \n",
+    "            # create a new column for our predictions\n",
+    "            test_df['predictions'] = test_df.apply(self.classify_observation, axis=1, args=(self.tree,))\n",
+    "            \n",
+    "            # return True or False where our predictions are equal to our labels\n",
+    "            test_df['correct_predictions'] = test_df['predictions'] == y_test_true\n",
+    "\n",
+    "            # return how accurate the predictions are\n",
+    "            return (\"Accuracy:\", test_df['correct_predictions'].mean())\n",
+    "        \n",
+    "        # if a tree wasn't fitted\n",
+    "        else:\n",
+    "            print(\"NotFittedError: Please fit your decision tree first!\")\n",
     "\n",
     "    def entropy(self, data):\n",
     "\n",
@@ -288,7 +332,36 @@
     "        \n",
     "        # return entropy\n",
     "        return sum(probabilities * -np.log2(probabilities))\n",
+    "    \n",
+    "    \n",
+    "    def overall_entropy(self, data_below_threshold, data_above_threshold):\n",
     "\n",
+    "        '''Overall entropy'''\n",
+    "\n",
+    "        p_below = len(data_below_threshold) / (len(data_below_threshold) + len(data_above_threshold))\n",
+    "        p_above = len(data_above_threshold) / (len(data_below_threshold) + len(data_above_threshold))\n",
+    "\n",
+    "        return (p_below * self.entropy(data_below_threshold)) + (p_above * self.entropy(data_above_threshold))\n",
+    "\n",
+    "\n",
+    "    def purity(self, data):\n",
+    "\n",
+    "        # last column of the df must be the labels!\n",
+    "        labels = data[:, -1]\n",
+    "\n",
+    "        # if data has only one kind of label\n",
+    "        if len(np.unique(labels)) == 1:\n",
+    "\n",
+    "            # it is pure\n",
+    "            return True\n",
+    "\n",
+    "        # if data has a few different labels still\n",
+    "        else:\n",
+    "\n",
+    "            # it isn't pure\n",
+    "            return False\n",
+    "        \n",
+    "    \n",
     "    def make_classification(self, data):\n",
     "\n",
     "        '''Once the max depth or min samples or purity is 1, \n",
@@ -303,6 +376,7 @@
     "        # return the most common class/label\n",
     "        return counter.most_common(1)[0][0]\n",
     "\n",
+    "    \n",
     "    def split_data(self, data, split_feature, split_threshold):\n",
     "\n",
     "        # array of only the split_feature\n",
@@ -311,14 +385,6 @@
     "        # array where feature values do not exceed threshold, array where does exceed threshold\n",
     "        return data[feature_values <= split_threshold], data[feature_values > split_threshold]\n",
     "\n",
-    "    def overall_entropy(self, data_below_threshold, data_above_threshold):\n",
-    "\n",
-    "        '''Overall entropy'''\n",
-    "\n",
-    "        p_below = len(data_below_threshold) / (len(data_below_threshold) + len(data_above_threshold))\n",
-    "        p_above = len(data_above_threshold) / (len(data_below_threshold) + len(data_above_threshold))\n",
-    "\n",
-    "        return (p_below * self.entropy(data_below_threshold)) + (p_above * self.entropy(data_above_threshold))\n",
     "\n",
     "    def potential_splits(self, data):\n",
     "        \n",
@@ -353,6 +419,7 @@
     "        # return dictionary\n",
     "        return potential_splits\n",
     "\n",
+    "    \n",
     "    def find_best_split(self, data, potential_splits):\n",
     "\n",
     "        lowest_entropy = 9999\n",
@@ -384,24 +451,6 @@
     "\n",
     "        # return the best potential split\n",
     "        return best_split_feature, best_split_threshold\n",
-    "    \n",
-    "\n",
-    "    def purity(self, data):\n",
-    "\n",
-    "        # last column of the df must be the labels!\n",
-    "        labels = data[:, -1]\n",
-    "\n",
-    "        # if data has only one kind of label\n",
-    "        if len(np.unique(labels)) == 1:\n",
-    "\n",
-    "            # it is pure\n",
-    "            return True\n",
-    "\n",
-    "        # if data has a few different labels still\n",
-    "        else:\n",
-    "\n",
-    "            # it isn't pure\n",
-    "            return False\n",
     "\n",
     "\n",
     "    def decision_tree(self, train_df, min_samples, max_depth, counter=0):\n",
@@ -477,6 +526,7 @@
     "            \n",
     "            return subtree\n",
     "\n",
+    "        \n",
     "    def classify_observation(self, observation, tree):\n",
     "\n",
     "        # store the current question \n",
@@ -508,49 +558,7 @@
     "        else:\n",
     "\n",
     "            # recursion with the 'answer' subtree as the tree argument\n",
-    "            return self.classify_observation(observation, answer)\n",
-    "        \n",
-    "    def predict(self, test_df):\n",
-    "\n",
-    "        # if a tree has been fitted\n",
-    "        if self.tree:\n",
-    "            \n",
-    "            # store true labels for our test_df\n",
-    "            y_test_true = test_df.iloc[:, -1]\n",
-    "            \n",
-    "            while self.append not in ['Y', 'y', 'N', 'n']:\n",
-    "                \n",
-    "                # ask the user if they want the DTC's predictions appended\n",
-    "                self.append = input('Append predictions as new column in input dataframe? Y or N')\n",
-    "                \n",
-    "                # if they do \n",
-    "                if self.append in ['Y', 'y']:\n",
-    "                    \n",
-    "                    continue\n",
-    "            \n",
-    "                # if they don't want their predictions appended\n",
-    "                elif self.append in ['N', 'n']:\n",
-    "                    \n",
-    "                    # create a copy of the test_df so results don't get appended\n",
-    "                    test_df = test_df.copy()\n",
-    "                    \n",
-    "                # if not a valid input  \n",
-    "                else:\n",
-    "                    \n",
-    "                    print(\"Not a valid input. Try again you silly goose.\")\n",
-    "            \n",
-    "            # create a new column for our predictions\n",
-    "            test_df['predictions'] = test_df.apply(self.classify_observation, axis=1, args=(self.tree,))\n",
-    "            \n",
-    "            # return True or False where our predictions are equal to our labels\n",
-    "            test_df['correct_predictions'] = test_df['predictions'] == y_test_true\n",
-    "\n",
-    "            # return how accurate the predictions are\n",
-    "            return (\"Accuracy:\", test_df['correct_predictions'].mean())\n",
-    "        \n",
-    "        # if a tree wasn't fitted\n",
-    "        else:\n",
-    "            print(\"NotFittedError: Please fit your decision tree first!\")"
+    "            return self.classify_observation(observation, answer)"
    ]
   },
   {
