--- a/DecisionTreeClassifier.ipynb
+++ b/DecisionTreeClassifier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
        "4   5            5.0           3.6            1.4           0.2  Iris-setosa"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
        "(150, 5)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,7 @@
        "149            5.9           3.0            5.1           1.8  Iris-virginica"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -572,7 +572,7 @@
        "((121, 5), (30, 5))"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -595,16 +595,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<__main__.DecisionTreeClassifier at 0x111d15c90>"
+       "<__main__.DecisionTreeClassifier at 0x118bc4590>"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -616,7 +616,132 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Append predictions as new column in input dataframe? Y or N n\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "('Accuracy:', 0.9666666666666667)"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Predict our test df values\n",
+    "dtc.predict(test_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SepalLengthCm</th>\n",
+       "      <th>SepalWidthCm</th>\n",
+       "      <th>PetalLengthCm</th>\n",
+       "      <th>PetalWidthCm</th>\n",
+       "      <th>Species</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>92</th>\n",
+       "      <td>5.8</td>\n",
+       "      <td>2.6</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1.2</td>\n",
+       "      <td>Iris-versicolor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>148</th>\n",
+       "      <td>6.2</td>\n",
+       "      <td>3.4</td>\n",
+       "      <td>5.4</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>Iris-virginica</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>5.4</td>\n",
+       "      <td>3.9</td>\n",
+       "      <td>1.7</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>Iris-setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>107</th>\n",
+       "      <td>7.3</td>\n",
+       "      <td>2.9</td>\n",
+       "      <td>6.3</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>Iris-virginica</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>66</th>\n",
+       "      <td>5.6</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>Iris-versicolor</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     SepalLengthCm  SepalWidthCm  PetalLengthCm  PetalWidthCm          Species\n",
+       "92             5.8           2.6            4.0           1.2  Iris-versicolor\n",
+       "148            6.2           3.4            5.4           2.3   Iris-virginica\n",
+       "5              5.4           3.9            1.7           0.4      Iris-setosa\n",
+       "107            7.3           2.9            6.3           1.8   Iris-virginica\n",
+       "66             5.6           3.0            4.5           1.5  Iris-versicolor"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check that test_df looks the same\n",
+    "test_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -629,22 +754,24 @@
     {
      "data": {
       "text/plain": [
-       "('Accuracy:', 0.9)"
+       "('Accuracy:', 0.9666666666666667)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Predict our test df values\n",
-    "dtc.predict(test_df)"
+    "# This time we want to append our predictions so we can look at our data better\n",
+    "dtc_with_appending = DecisionTreeClassifier(min_samples=2, max_depth=4)\n",
+    "dtc_with_appending.fit(train_df)\n",
+    "dtc_with_appending.predict(test_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -679,53 +806,53 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>44</th>\n",
-       "      <td>5.1</td>\n",
-       "      <td>3.8</td>\n",
-       "      <td>1.9</td>\n",
+       "      <th>92</th>\n",
+       "      <td>5.8</td>\n",
+       "      <td>2.6</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1.2</td>\n",
+       "      <td>Iris-versicolor</td>\n",
+       "      <td>Iris-versicolor</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>148</th>\n",
+       "      <td>6.2</td>\n",
+       "      <td>3.4</td>\n",
+       "      <td>5.4</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>Iris-virginica</td>\n",
+       "      <td>Iris-virginica</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>5.4</td>\n",
+       "      <td>3.9</td>\n",
+       "      <td>1.7</td>\n",
        "      <td>0.4</td>\n",
        "      <td>Iris-setosa</td>\n",
        "      <td>Iris-setosa</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>5.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.6</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>Iris-setosa</td>\n",
-       "      <td>Iris-setosa</td>\n",
+       "      <th>107</th>\n",
+       "      <td>7.3</td>\n",
+       "      <td>2.9</td>\n",
+       "      <td>6.3</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>Iris-virginica</td>\n",
+       "      <td>Iris-virginica</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>61</th>\n",
-       "      <td>5.9</td>\n",
+       "      <th>66</th>\n",
+       "      <td>5.6</td>\n",
        "      <td>3.0</td>\n",
-       "      <td>4.2</td>\n",
+       "      <td>4.5</td>\n",
        "      <td>1.5</td>\n",
        "      <td>Iris-versicolor</td>\n",
        "      <td>Iris-versicolor</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33</th>\n",
-       "      <td>5.5</td>\n",
-       "      <td>4.2</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>Iris-setosa</td>\n",
-       "      <td>Iris-setosa</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>4.8</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>Iris-setosa</td>\n",
-       "      <td>Iris-setosa</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -733,28 +860,27 @@
        "</div>"
       ],
       "text/plain": [
-       "    SepalLengthCm  SepalWidthCm  PetalLengthCm  PetalWidthCm          Species  \\\n",
-       "44            5.1           3.8            1.9           0.4      Iris-setosa   \n",
-       "25            5.0           3.0            1.6           0.2      Iris-setosa   \n",
-       "61            5.9           3.0            4.2           1.5  Iris-versicolor   \n",
-       "33            5.5           4.2            1.4           0.2      Iris-setosa   \n",
-       "12            4.8           3.0            1.4           0.1      Iris-setosa   \n",
+       "     SepalLengthCm  SepalWidthCm  PetalLengthCm  PetalWidthCm  \\\n",
+       "92             5.8           2.6            4.0           1.2   \n",
+       "148            6.2           3.4            5.4           2.3   \n",
+       "5              5.4           3.9            1.7           0.4   \n",
+       "107            7.3           2.9            6.3           1.8   \n",
+       "66             5.6           3.0            4.5           1.5   \n",
        "\n",
-       "        predictions  correct_predictions  \n",
-       "44      Iris-setosa                 True  \n",
-       "25      Iris-setosa                 True  \n",
-       "61  Iris-versicolor                 True  \n",
-       "33      Iris-setosa                 True  \n",
-       "12      Iris-setosa                 True  "
+       "             Species      predictions  correct_predictions  \n",
+       "92   Iris-versicolor  Iris-versicolor                 True  \n",
+       "148   Iris-virginica   Iris-virginica                 True  \n",
+       "5        Iris-setosa      Iris-setosa                 True  \n",
+       "107   Iris-virginica   Iris-virginica                 True  \n",
+       "66   Iris-versicolor  Iris-versicolor                 True  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Check that test_df looks the same\n",
     "test_df.head()"
    ]
   }
