added print_tree() function

--- a/DecisionTreeClassifier.ipynb
+++ b/DecisionTreeClassifier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
        "4   5            5.0           3.6            1.4           0.2  Iris-setosa"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
        "(150, 5)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,7 @@
        "149            5.9           3.0            5.1           1.8  Iris-virginica"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,6 +525,10 @@
     "                subtree[split_question].append(answer_false)\n",
     "            \n",
     "            return subtree\n",
+    "        \n",
+    "    def print_tree(self):\n",
+    "        \n",
+    "        return self.tree\n",
     "\n",
     "        \n",
     "    def classify_observation(self, observation, tree):\n",
@@ -563,16 +567,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((121, 5), (30, 5))"
+       "((124, 5), (30, 5))"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -585,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -595,16 +599,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<__main__.DecisionTreeClassifier at 0x118bc4590>"
+       "<__main__.DecisionTreeClassifier at 0x123880a10>"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -612,6 +616,56 @@
    "source": [
     "# Fit a train df\n",
     "dtc.fit(train_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'PetalLengthCm <= 2.5999999999999996': ['Iris-setosa',\n",
+       "  {'PetalWidthCm <= 1.75': [{'PetalLengthCm <= 4.95': [{'PetalWidthCm <= 1.65': ['Iris-versicolor',\n",
+       "        'Iris-virginica']},\n",
+       "      {'SepalWidthCm <= 2.6500000000000004': ['Iris-virginica',\n",
+       "        {'SepalLengthCm <= 6.95': ['Iris-versicolor', 'Iris-virginica']}]}]},\n",
+       "    'Iris-virginica']}]}"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dtc.decision_tree(train_df, min_samples=1, max_depth=7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'PetalLengthCm <= 2.5999999999999996': ['Iris-setosa',\n",
+       "  {'PetalWidthCm <= 1.75': [{'PetalLengthCm <= 4.95': [{'PetalWidthCm <= 1.65': ['Iris-versicolor',\n",
+       "        'Iris-virginica']},\n",
+       "      {'SepalWidthCm <= 2.6500000000000004': ['Iris-virginica',\n",
+       "        'Iris-versicolor']}]},\n",
+       "    'Iris-virginica']}]}"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dtc.print_tree()"
    ]
   },
   {
