--- a/DecisionTreeClassifier.ipynb
+++ b/DecisionTreeClassifier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
        "4   5            5.0           3.6            1.4           0.2  Iris-setosa"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
        "(150, 5)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,7 @@
        "149            5.9           3.0            5.1           1.8  Iris-virginica"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,14 +334,12 @@
     "        return sum(probabilities * -np.log2(probabilities))\n",
     "    \n",
     "    \n",
-    "    def overall_entropy(self, data_below_threshold, data_above_threshold):\n",
-    "\n",
-    "        '''Overall entropy'''\n",
+    "    def information_gain(self, data_below_threshold, data_above_threshold):\n",
     "\n",
     "        p_below = len(data_below_threshold) / (len(data_below_threshold) + len(data_above_threshold))\n",
     "        p_above = len(data_above_threshold) / (len(data_below_threshold) + len(data_above_threshold))\n",
     "\n",
-    "        return (p_below * self.entropy(data_below_threshold)) + (p_above * self.entropy(data_above_threshold))\n",
+    "        return 1 - ((p_below * self.entropy(data_below_threshold)) + (p_above * self.entropy(data_above_threshold)))\n",
     "\n",
     "\n",
     "    def purity(self, data):\n",
@@ -422,7 +420,7 @@
     "    \n",
     "    def find_best_split(self, data, potential_splits):\n",
     "\n",
-    "        lowest_entropy = 9999\n",
+    "        best_info_gain = 0\n",
     "\n",
     "        # for each dictionary key\n",
     "        for key in potential_splits:\n",
@@ -437,13 +435,13 @@
     "                    split_threshold=value)\n",
     "                \n",
     "                # calculate entropy at this split\n",
-    "                entropy_for_this_split = self.overall_entropy(data_below_threshold, data_above_threshold)\n",
+    "                info_gain_for_this_split = self.information_gain(data_below_threshold, data_above_threshold)\n",
     "\n",
     "                # if entropy at this split is lower than the lowest entropy found so far\n",
-    "                if entropy_for_this_split < lowest_entropy:\n",
+    "                if info_gain_for_this_split > best_info_gain:\n",
     "\n",
     "                    # the entropy at this split is now the lowest \n",
-    "                    lowest_entropy = entropy_for_this_split\n",
+    "                    best_info_gain = info_gain_for_this_split\n",
     "\n",
     "                    # keep a record of this key, value pair\n",
     "                    best_split_feature = key\n",
@@ -567,16 +565,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((124, 5), (30, 5))"
+       "((123, 5), (30, 5))"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -589,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -599,16 +597,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<__main__.DecisionTreeClassifier at 0x123880a10>"
+       "<__main__.DecisionTreeClassifier at 0x1166000d0>"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -620,57 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'PetalLengthCm <= 2.5999999999999996': ['Iris-setosa',\n",
-       "  {'PetalWidthCm <= 1.75': [{'PetalLengthCm <= 4.95': [{'PetalWidthCm <= 1.65': ['Iris-versicolor',\n",
-       "        'Iris-virginica']},\n",
-       "      {'SepalWidthCm <= 2.6500000000000004': ['Iris-virginica',\n",
-       "        {'SepalLengthCm <= 6.95': ['Iris-versicolor', 'Iris-virginica']}]}]},\n",
-       "    'Iris-virginica']}]}"
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dtc.decision_tree(train_df, min_samples=1, max_depth=7)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'PetalLengthCm <= 2.5999999999999996': ['Iris-setosa',\n",
-       "  {'PetalWidthCm <= 1.75': [{'PetalLengthCm <= 4.95': [{'PetalWidthCm <= 1.65': ['Iris-versicolor',\n",
-       "        'Iris-virginica']},\n",
-       "      {'SepalWidthCm <= 2.6500000000000004': ['Iris-virginica',\n",
-       "        'Iris-versicolor']}]},\n",
-       "    'Iris-virginica']}]}"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dtc.print_tree()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -683,10 +631,10 @@
     {
      "data": {
       "text/plain": [
-       "('Accuracy:', 0.9666666666666667)"
+       "('Accuracy:', 0.8333333333333334)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -698,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -731,59 +679,59 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>92</th>\n",
-       "      <td>5.8</td>\n",
-       "      <td>2.6</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>1.2</td>\n",
-       "      <td>Iris-versicolor</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>148</th>\n",
-       "      <td>6.2</td>\n",
-       "      <td>3.4</td>\n",
-       "      <td>5.4</td>\n",
-       "      <td>2.3</td>\n",
-       "      <td>Iris-virginica</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>5.4</td>\n",
-       "      <td>3.9</td>\n",
-       "      <td>1.7</td>\n",
-       "      <td>0.4</td>\n",
+       "      <th>43</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>1.6</td>\n",
+       "      <td>0.6</td>\n",
        "      <td>Iris-setosa</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>107</th>\n",
-       "      <td>7.3</td>\n",
-       "      <td>2.9</td>\n",
-       "      <td>6.3</td>\n",
-       "      <td>1.8</td>\n",
-       "      <td>Iris-virginica</td>\n",
+       "      <th>45</th>\n",
+       "      <td>4.8</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>Iris-setosa</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>66</th>\n",
-       "      <td>5.6</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>4.5</td>\n",
-       "      <td>1.5</td>\n",
+       "      <th>65</th>\n",
+       "      <td>6.7</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>4.4</td>\n",
+       "      <td>1.4</td>\n",
        "      <td>Iris-versicolor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>67</th>\n",
+       "      <td>5.8</td>\n",
+       "      <td>2.7</td>\n",
+       "      <td>4.1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Iris-versicolor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>5.1</td>\n",
+       "      <td>3.4</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>Iris-setosa</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     SepalLengthCm  SepalWidthCm  PetalLengthCm  PetalWidthCm          Species\n",
-       "92             5.8           2.6            4.0           1.2  Iris-versicolor\n",
-       "148            6.2           3.4            5.4           2.3   Iris-virginica\n",
-       "5              5.4           3.9            1.7           0.4      Iris-setosa\n",
-       "107            7.3           2.9            6.3           1.8   Iris-virginica\n",
-       "66             5.6           3.0            4.5           1.5  Iris-versicolor"
+       "    SepalLengthCm  SepalWidthCm  PetalLengthCm  PetalWidthCm          Species\n",
+       "43            5.0           3.5            1.6           0.6      Iris-setosa\n",
+       "45            4.8           3.0            1.4           0.3      Iris-setosa\n",
+       "65            6.7           3.1            4.4           1.4  Iris-versicolor\n",
+       "67            5.8           2.7            4.1           1.0  Iris-versicolor\n",
+       "39            5.1           3.4            1.5           0.2      Iris-setosa"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -795,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -808,10 +756,10 @@
     {
      "data": {
       "text/plain": [
-       "('Accuracy:', 0.9666666666666667)"
+       "('Accuracy:', 0.8333333333333334)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -825,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -860,53 +808,53 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>92</th>\n",
-       "      <td>5.8</td>\n",
-       "      <td>2.6</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>1.2</td>\n",
-       "      <td>Iris-versicolor</td>\n",
-       "      <td>Iris-versicolor</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>148</th>\n",
-       "      <td>6.2</td>\n",
-       "      <td>3.4</td>\n",
-       "      <td>5.4</td>\n",
-       "      <td>2.3</td>\n",
-       "      <td>Iris-virginica</td>\n",
-       "      <td>Iris-virginica</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>5.4</td>\n",
-       "      <td>3.9</td>\n",
-       "      <td>1.7</td>\n",
-       "      <td>0.4</td>\n",
+       "      <th>43</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>1.6</td>\n",
+       "      <td>0.6</td>\n",
        "      <td>Iris-setosa</td>\n",
        "      <td>Iris-setosa</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>107</th>\n",
-       "      <td>7.3</td>\n",
-       "      <td>2.9</td>\n",
-       "      <td>6.3</td>\n",
-       "      <td>1.8</td>\n",
-       "      <td>Iris-virginica</td>\n",
-       "      <td>Iris-virginica</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>66</th>\n",
-       "      <td>5.6</td>\n",
+       "      <th>45</th>\n",
+       "      <td>4.8</td>\n",
        "      <td>3.0</td>\n",
-       "      <td>4.5</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>Iris-setosa</td>\n",
+       "      <td>Iris-setosa</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>65</th>\n",
+       "      <td>6.7</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>4.4</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>Iris-versicolor</td>\n",
+       "      <td>Iris-versicolor</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>67</th>\n",
+       "      <td>5.8</td>\n",
+       "      <td>2.7</td>\n",
+       "      <td>4.1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Iris-versicolor</td>\n",
+       "      <td>Iris-versicolor</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>5.1</td>\n",
+       "      <td>3.4</td>\n",
        "      <td>1.5</td>\n",
-       "      <td>Iris-versicolor</td>\n",
-       "      <td>Iris-versicolor</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>Iris-setosa</td>\n",
+       "      <td>Iris-setosa</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -914,22 +862,22 @@
        "</div>"
       ],
       "text/plain": [
-       "     SepalLengthCm  SepalWidthCm  PetalLengthCm  PetalWidthCm  \\\n",
-       "92             5.8           2.6            4.0           1.2   \n",
-       "148            6.2           3.4            5.4           2.3   \n",
-       "5              5.4           3.9            1.7           0.4   \n",
-       "107            7.3           2.9            6.3           1.8   \n",
-       "66             5.6           3.0            4.5           1.5   \n",
+       "    SepalLengthCm  SepalWidthCm  PetalLengthCm  PetalWidthCm          Species  \\\n",
+       "43            5.0           3.5            1.6           0.6      Iris-setosa   \n",
+       "45            4.8           3.0            1.4           0.3      Iris-setosa   \n",
+       "65            6.7           3.1            4.4           1.4  Iris-versicolor   \n",
+       "67            5.8           2.7            4.1           1.0  Iris-versicolor   \n",
+       "39            5.1           3.4            1.5           0.2      Iris-setosa   \n",
        "\n",
-       "             Species      predictions  correct_predictions  \n",
-       "92   Iris-versicolor  Iris-versicolor                 True  \n",
-       "148   Iris-virginica   Iris-virginica                 True  \n",
-       "5        Iris-setosa      Iris-setosa                 True  \n",
-       "107   Iris-virginica   Iris-virginica                 True  \n",
-       "66   Iris-versicolor  Iris-versicolor                 True  "
+       "        predictions  correct_predictions  \n",
+       "43      Iris-setosa                 True  \n",
+       "45      Iris-setosa                 True  \n",
+       "65  Iris-versicolor                 True  \n",
+       "67  Iris-versicolor                 True  \n",
+       "39      Iris-setosa                 True  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
